--- a/index.html
+++ b/index.html
@@ -6,14 +6,33 @@
     <!-- Import Styles -->
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Import Vue.js -->
-    <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   </head>
   <body>
     <div id="app">
       <h1>Product goes here</h1>
+      <div class="cart" style="float: right; border:1px solid #ccc">Cart {{cart.length}}</div>
+      <product-display :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeFromCart"></product-display>
+
+
+      <div class="product-image" :class="{'out-of-stock-img': !InStock}">
+        <img :src="image"></img>
+        <a href="https://www.w3schools.com/">Click me</a>
+      </div>
     </div>
 
-    <!-- Import Js -->
+    <!-- Import App -->
     <script src="./main.js"></script>
+    <!-- Import Components -->
+    <script src="./components/productDisplay.js"></script>
+    <script src="./components/ProductDetails.js"></script>
+    <script src="./components/ReviewForm.js"></script>
+    <script src="./components/ReviewDisplay.js"></script>
+
+    <!-- mount app -->
+    <!-- so that we can mount the app into the DOM -->
+    <script>
+      const mountedApp = app.mount('#app');
+    </script>
   </body>
 </html>
